k8s/prod-servicea/deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
  namespace: prod-servicea
spec:
  podSelector: {}
  policyTypes:
    - Egress
